# Backlog_tool_1

./: .gitignore  CHANGELOG.md  README.md  prompt.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml  nightly.yml
backlog_cli/: __init__.py  cli.py  config.py  csv_store.py  openai_client.py
backlog_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: advanced.md  architecture.md  demo.md
rules/: Basic Rules.txt  process-task-list.md
scripts/: build.ps1  release.ps1  test_install.ps1
tasks/: prd-backlog-cli.md  tasks-prd-backlog-cli.md
tests/: conftest.py  test_cli_dry_run.py  test_cli_integration.py  test_config_logging.py  test_csv_store.py  test_csv_store_edge.py  test_openai_client.py  test_readme_context.py
