[metadata]
name = backlog-cli
version = 0.1.0
author = Matt T
license = MIT
description = "Dictation-driven backlog entry CLI tool."
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    openai>=1.0.0
    python-dotenv>=1.0.0

[options.entry_points]
console_scripts =
    bckl = backlog_cli.cli:main
